Fixed post title/info getting cut off ( span wrapping issue )

--- a/css/dimens.scss
+++ b/css/dimens.scss
@@ -136,7 +136,7 @@ $font-x-large: 5;
     // Post
     //////////////////////////
 
-    --post-spacing: 3px;
+    --post-spacing: 4px;
 
     ////////////////////////// 
     // subreddit dropdown
